Fixed spacing.

--- a/step3/style.css
+++ b/step3/style.css
@@ -15,7 +15,7 @@ body {
 
 .blogEntry h1 {
 	font-size: 1.5em;
-	margin-top: -3px;
+	margin-top: 1px;
 }
 
 .blogEntry h2 {
